# minimalgraphics

./: 5monotxt.c  5x7mod.c  CMakeLists.txt  LICENSE  README.md  fnt_3.h  fnt_6.h  make.mk  mgl.c  mgl.h  mgl_conf_template.h  mgldisp_color.c  mgldisp_mono.c  mgldisp_sdl.c
fonts/: 5mono.txt  5x7mod.txt  5x7mod_20231109.txt  conv.py  convert.py  fnt_16.txt  fnt_3.txt  fnt_5.h  fnt_5.txt  fnt_6.h  fnt_6.txt  fnt_c16.h  fnt_m4.h  fnt_m4.txt  rearrange.py
